--- a/why-ts/index.html
+++ b/why-ts/index.html
@@ -14,6 +14,7 @@
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script> -->
+    <script src="./app.v2.js"></script>
   </body>
 </html>
